"fix contrast of p"

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 p {
-    color: hsl(0, 0%, 48%);
+    color: #595959;
 }
 
 * {
